# gbaflare

./: .gitignore  CMakeLists.txt  README.md  configure.bat  configure.sh  generate.py
src/: CMakeLists.txt  apu.cpp  apu.h  arm.cpp  arm.h  channel.cpp  channel.h  cpu.cpp  cpu.h  dma.cpp  dma.h  emulator.cpp  emulator.h  flash.cpp  flash.h  main.cpp  main.h  memory.cpp  memory.h  ops.cpp  ops.h  platform.cpp  platform.h  platform_sdl.cpp  platform_sdl.h  ppu.cpp  ppu.h  release.cpp  scheduler.cpp  scheduler.h  thumb.cpp  thumb.h  timer.cpp  timer.h  types.cpp  types.h
src/common/include/common/: types.h
src/common/src/: types.cpp
src/gba/include/gba/: apu.h  arm.h  channel.h  cpu.h  dma.h  eeprom.h  emulator.h  flash.h  memory.h  ops.h  ppu.h  scheduler.h  thumb.h  timer.h
src/gba/include/gba/cpu/: arm_lut.cpp  thumb_lut.cpp
src/gba/src/: apu.cpp  arm.cpp  channel.cpp  cpu.cpp  dma.cpp  eeprom.cpp  emulator.cpp  flash.cpp  memory.cpp  ppu.cpp  release.cpp  scheduler.cpp  thumb.cpp  timer.cpp
src/gba/src/gencpp/: arm.txt  thumb.txt
src/platform/include/platform/common/: platform.h
src/platform/include/platform/qt/: mainwindow.h
src/platform/include/platform/sdl2/: platform_sdl.h
src/platform/src/common/: platform.cpp
src/platform/src/qt/: main.cpp  mainwindow.cpp  mainwindow.ui
src/platform/src/sdl2/: platform_sdl.cpp
